Showing multiple chairs (if available). Fixed person card not collapsing when...

--- a/components/Dashboard/Wayfinder/Wayfinder.module.scss
+++ b/components/Dashboard/Wayfinder/Wayfinder.module.scss
@@ -227,7 +227,7 @@ $searchWidth: 350px;
     row-gap: g.$margin-small;
     column-gap: g.$margin-base;
 
-    padding-inline-start: g.$margin-small;
+    padding-inline: g.$margin-small;
 
     align-items: center;
 
